--- a/index.html
+++ b/index.html
@@ -1,12 +1,32 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lanas y mas</title>
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
+    <header>
+        <nav>
+            <a href="#" >¿Quienes Somos?</a>
+            <a href="#" >Contactanos</a>
+            <a href="#" >Portafolios</a>
+            <a href="#" >Ubicación</a>
+        </nav>
+        <section>
+            <h1>Las mejores Manualidades</h1>
+            <h1>más texto</h1>
+            <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
+        </section>
+        <main>
+            <section class="¿Quienes Somos">
+
+            </section>
+        </main>
+    </header>
+
     
 </body>
 </html>
