--- a/index.html
+++ b/index.html
@@ -21,7 +21,8 @@
             <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
         </section>
         <main>
-            <section class="¿Quienes Somos">
+            <section class="contenedor quienes-somos">
+                <h2 class="titulo">Nuestro Producto</h2>
 
             </section>
         </main>
