--- a/index.html
+++ b/index.html
@@ -23,6 +23,17 @@
         <main>
             <section class="contenedor quienes-somos">
                 <h2 class="titulo">Nuestro Producto</h2>
+                <div class="contenedor-sobre-nosotros">
+                    <img src="img/img.jpg" alt="" class="imagen-acerca-nosotros">
+                    <div class="contenedor-textos">
+                        <div class="contenido-textos">
+                            <h3><span>1</span> Los mejores Productos</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sit fugit impedit fugiat ad saepe, libero illum autem minima, in assumenda corporis sed facere necessitatibus reiciendis sequi nam voluptate nulla</p>
+                            <h3><span>2</span>Al Mejor Precio</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sit fugit impedit fugiat ad saepe, libero illum autem minima, in assumenda corporis sed facere necessitatibus reiciendis sequi nam voluptate nulla</p>
+                        </div>
+                    </div>
+                </div>
 
             </section>
         </main>
