--- a/index.html
+++ b/index.html
@@ -34,11 +34,47 @@
                         </div>
                     </div>
                 </div>
-
+            </section>
+            <section class="Portafolio">
+                <div class="contenedor">
+                    <h2 class="Titulo">Portafolio</h2>
+                    <div class="galeria-port">
+                        <div class="imagen1-port">
+                            <img src="img/img2.jpg" alt=""><div class="hover-galeria">
+                                <img src="img/img6.jpg" alt="">
+                                <p>Nuestro Trabajo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria-port">
+                        <div class="imagen3-port">
+                            <img src="img/img2.jpg" alt=""><div class="hover-galeria">
+                                <img src="img/img6.jpg" alt="">
+                                <p>Nuestro Trabajo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria-port">
+                        <div class="imagen-port">
+                            <img src="img/img4.jpg" alt=""><div class="hover-galeria">
+                                <img src="img/img6.jpg" alt="">
+                                <p>Nuestro Trabajo</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="galeria-port">
+                        <div class="imagen-port">
+                            <img src="img/img6.jpg" alt=""><div class="hover-galeria">
+                                <img src="img/img6.jpg" alt="">
+                                <p>Nuestro Trabajo</p>
+                            </div>
+                        </div>
+                    </div>
+                    
+                </div>
             </section>
         </main>
     </header>
-
     
 </body>
 </html>
