--- a/index.html
+++ b/index.html
@@ -1,80 +1,107 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lanas y mas</title>
-    <link rel="stylesheet" href="css/estilos.css">
-</head>
-<body>
+    <link rel="stylesheet" href="css/estilos.css" />
+  </head>
+
+  <body>
     <header>
-        <nav>
-            <a href="#" >¿Quienes Somos?</a>
-            <a href="#" >Contactanos</a>
-            <a href="#" >Portafolios</a>
-            <a href="#" >Ubicación</a>
-        </nav>
-        <section>
-            <h1>Las mejores Manualidades</h1>
-            <h1>más texto</h1>
-            <div class="wave" style="height: 150px; overflow: hidden;" ><svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%;"><path d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z" style="stroke: none; fill: #08f;"></path></svg></div>
+      <nav>
+        <a href="#">¿Quienes Somos?</a>
+        <a href="#">Contactanos</a>
+        <a href="#">Portafolios</a>
+        <a href="#">Ubicación</a>
+      </nav>
+
+      <section>
+        <h1>Las mejores Manualidades</h1>
+        <h1>más texto</h1>
+        <div class="wave" style="height: 150px; overflow: hidden">
+          <svg
+            viewBox="0 0 500 150"
+            preserveAspectRatio="none"
+            style="height: 100%; width: 100%"
+          >
+            <path
+              d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z"
+              style="stroke: none; fill: #08f"
+            ></path>
+          </svg>
+        </div>
+      </section>
+
+      <main>
+        <section class="contenedor quienes-somos">
+          <h2 class="titulo">Nuestro Producto</h2>
+          <div class="contenedor-sobre-nosotros">
+            <img src="img/General_bufandas.jpg" alt="" class="imagen-acerca-nosotros" />
+            <div class="contenedor-textos">
+              <div class="contenido-textos">
+                <h3><span>1</span> Los mejores Productos</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
+                  sit fugit impedit fugiat ad saepe, libero illum autem minima,
+                  in assumenda corporis sed facere necessitatibus reiciendis
+                  sequi nam voluptate nulla
+                </p>
+                <h3><span>2</span>Al Mejor Precio</h3>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
+                  sit fugit impedit fugiat ad saepe, libero illum autem minima,
+                  in assumenda corporis sed facere necessitatibus reiciendis
+                  sequi nam voluptate nulla
+                </p>
+              </div>
+            </div>
+          </div>
         </section>
-        <main>
-            <section class="contenedor quienes-somos">
-                <h2 class="titulo">Nuestro Producto</h2>
-                <div class="contenedor-sobre-nosotros">
-                    <img src="img/img.jpg" alt="" class="imagen-acerca-nosotros">
-                    <div class="contenedor-textos">
-                        <div class="contenido-textos">
-                            <h3><span>1</span> Los mejores Productos</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sit fugit impedit fugiat ad saepe, libero illum autem minima, in assumenda corporis sed facere necessitatibus reiciendis sequi nam voluptate nulla</p>
-                            <h3><span>2</span>Al Mejor Precio</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi sit fugit impedit fugiat ad saepe, libero illum autem minima, in assumenda corporis sed facere necessitatibus reiciendis sequi nam voluptate nulla</p>
-                        </div>
-                    </div>
+        <section class="Portafolio">
+          <div class="contenedor">
+            <h2 class="Titulo">Portafolio</h2>
+            <div class="galeria-port">
+              <div class="imagen1-port">
+                <img src="img/img2.jpg" alt="" />
+                <div class="hover-galeria">
+                  <img src="img/img6.jpg" alt="" />
+                  <p>Nuestro Trabajo</p>
                 </div>
-            </section>
-            <section class="Portafolio">
-                <div class="contenedor">
-                    <h2 class="Titulo">Portafolio</h2>
-                    <div class="galeria-port">
-                        <div class="imagen1-port">
-                            <img src="img/img2.jpg" alt=""><div class="hover-galeria">
-                                <img src="img/img6.jpg" alt="">
-                                <p>Nuestro Trabajo</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="galeria-port">
-                        <div class="imagen3-port">
-                            <img src="img/img2.jpg" alt=""><div class="hover-galeria">
-                                <img src="img/img6.jpg" alt="">
-                                <p>Nuestro Trabajo</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="galeria-port">
-                        <div class="imagen-port">
-                            <img src="img/img4.jpg" alt=""><div class="hover-galeria">
-                                <img src="img/img6.jpg" alt="">
-                                <p>Nuestro Trabajo</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="galeria-port">
-                        <div class="imagen-port">
-                            <img src="img/img6.jpg" alt=""><div class="hover-galeria">
-                                <img src="img/img6.jpg" alt="">
-                                <p>Nuestro Trabajo</p>
-                            </div>
-                        </div>
-                    </div>
-                    
+              </div>
+            </div>
+            <div class="galeria-port">
+              <div class="imagen3-port">
+                <img src="img/img2.jpg" alt="" />
+                <div class="hover-galeria">
+                  <img src="img/img6.jpg" alt="" />
+                  <p>Nuestro Trabajo</p>
                 </div>
-            </section>
-        </main>
+              </div>
+            </div>
+            <div class="galeria-port">
+              <div class="imagen-port">
+                <img src="img/img4.jpg" alt="" />
+                <div class="hover-galeria">
+                  <img src="img/img6.jpg" alt="" />
+                  <p>Nuestro Trabajo</p>
+                </div>
+              </div>
+            </div>
+            <div class="galeria-port">
+              <div class="imagen-port">
+                <img src="img/img6.jpg" alt="" />
+                <div class="hover-galeria">
+                  <img src="img/img6.jpg" alt="" />
+                  <p>Nuestro Trabajo</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+      </main>
     </header>
-    
-</body>
+  </body>
 </html>
