Actualización de secciones e imagenes

--- a/index.html
+++ b/index.html
@@ -1,108 +1,108 @@
 <!DOCTYPE html>
 <html lang="es">
 
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rise</title>
-    <link rel="shortcut icon" href="img/favicon_conejo.png" type="image/x-icon">
-    <link rel="stylesheet" href="css/estilos.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rise</title>
+  <link rel="shortcut icon" href="img/favicon_conejo.png" type="image/x-icon" />
+  <link rel="stylesheet" href="css/estilos.css" />
+</head>
 
-  <body>
-    <header>
-      <nav>
-        <a href="#">¿Quienes Somos?</a>
-        <a href="#">Contactanos</a>
-        <a href="#">Portafolios</a>
-        <a href="#">Ubicación</a>
-      </nav>
+<body>
 
-      <section>
-        <h1>Las mejores Manualidades</h1>
-        <h1>más texto</h1>
-        <div class="wave" style="height: 150px; overflow: hidden">
-          <svg
-            viewBox="0 0 500 150"
-            preserveAspectRatio="none"
-            style="height: 100%; width: 100%"
-          >
-            <path
-              d="M0.00,49.99 C150.00,150.00 349.21,-49.99 500.00,49.99 L500.00,150.00 L0.00,150.00 Z"
-              style="stroke: none; fill: #08f"
-            ></path>
-          </svg>
+
+  <header>
+
+    <nav>
+      <a href="#">Inicio</a>
+      ><a href="#">Portafolios</a>
+      <a href="#">Contacto</a>
+    </nav>
+
+    <section>
+      <h1>Es un gusto atenderte</h1>
+      <h1>Los mejores detalles hechos a mano</h1>
+      <div class="wave" style="height: 150px; overflow: hidden">
+        <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%">
+          <path d="M-8.74,71.55 C149.99,150.00 468.11,-2.44 509.31,87.34 L500.00,150.00 L0.00,150.00 Z"
+            style="stroke: none; fill: #afc906"></path>
+        </svg>
+      </div>
+    </section>
+
+  </header>
+
+  <main>
+
+    <section class="contenedor quienes-somos">
+      <he class="titulo">Inicio</he>
+      <div class="contenedor Inicio">
+        <img src="img/ballenas_fondo_inicial.jpg" alt="" />
+        <div class="contenido_texto_inicio">
+          <h3><span>1</span> Trabajo 100% casero y artesanal</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, maiores!</p>
         </div>
-      </section>
+        <div class="contenido_texto_inicio">
+          <h3><span>2</span> Al mejor precio</h3>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, maiores!</p>
+        </div>
+    </section>
 
-      <main>
-        <section class="contenedor quienes-somos">
-          <h2 class="titulo">Nuestro Producto</h2>
-          <div class="contenedor-sobre-nosotros">
-            <img src="img/General_bufandas.jpg" alt="" class="imagen-acerca-nosotros" />
-            <div class="contenedor-textos">
-              <div class="contenido-textos">
-                <h3><span>1</span> Los mejores Productos</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
-                  sit fugit impedit fugiat ad saepe, libero illum autem minima,
-                  in assumenda corporis sed facere necessitatibus reiciendis
-                  sequi nam voluptate nulla
-                </p>
-                <h3><span>2</span>Al Mejor Precio</h3>
-                <p>
-                  Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nisi
-                  sit fugit impedit fugiat ad saepe, libero illum autem minima,
-                  in assumenda corporis sed facere necessitatibus reiciendis
-                  sequi nam voluptate nulla
-                </p>
-              </div>
+    <section class="quienes_somos">
+      <div class="contenedor">
+        <h2 class="Titulo">Nuestro Portafolio</h2>
+
+        <div class="galeria-portafolio">
+          <div class="imagen-port">
+            <img src="img/muñeca_moño_rojo.png" alt="" />
+            <div class="hover-galeria">
+              <img src="img/icono_target.png" alt="" />
+              <p>Nuestro Trabajo</p>
             </div>
           </div>
-        </section>
-        <section class="Portafolio">
-          <div class="contenedor">
-            <h2 class="Titulo">Portafolio</h2>
-            <div class="galeria-port">
-              <div class="imagen1-port">
-                <img src="img/img2.jpg" alt="" />
-                <div class="hover-galeria">
-                  <img src="img/img6.jpg" alt="" />
-                  <p>Nuestro Trabajo</p>
-                </div>
-              </div>
-            </div>
-            <div class="galeria-port">
-              <div class="imagen3-port">
-                <img src="img/img2.jpg" alt="" />
-                <div class="hover-galeria">
-                  <img src="img/img6.jpg" alt="" />
-                  <p>Nuestro Trabajo</p>
-                </div>
-              </div>
-            </div>
-            <div class="galeria-port">
-              <div class="imagen-port">
-                <img src="img/img4.jpg" alt="" />
-                <div class="hover-galeria">
-                  <img src="img/img6.jpg" alt="" />
-                  <p>Nuestro Trabajo</p>
-                </div>
-              </div>
-            </div>
-            <div class="galeria-port">
-              <div class="imagen-port">
-                <img src="img/img6.jpg" alt="" />
-                <div class="hover-galeria">
-                  <img src="img/img6.jpg" alt="" />
-                  <p>Nuestro Trabajo</p>
-                </div>
-              </div>
+        </div>
+
+        <div class="galeria-portafolio">
+          <div class="imagen-port">
+            <img src="img/ron_da_error.png" alt="" />
+            <div class="hover-galeria">
+              <img src="img/icono_target.png" alt="" />
+              <p>Nuestro Trabajo</p>
             </div>
           </div>
-        </section>
-      </main>
-    </header>
-  </body>
+        </div>
+
+      </div>
+    </section>
+
+    <section>
+<div class="contactanos">
+  <h2 class="titulo">Contactanos</h2>
+  <div class="card">
+    <img src="img/logo_facebook.png" alt="">
+    <div class="contenido_texto_facebook">
+      <h4 class="">Facebook</h4>
+      <a  href="https://www.facebook.com/CaronlinaR/">/CaronlinaR</a>      
+    </div>
+
+  <div class="card">
+    <img src="img/logo_instagram.jpg" alt="">
+    <div class="contenido_texto_facebook">
+      <h4 class="">Instagram</h4>
+      <a  href="https://www.instagram.com/rise_mujer_/">/rise_mujer_</a>      
+    </div>
+
+        </div>
+      </div>
+
+    </section>
+
+
+
+  </main>
+
+</body>
+
 </html>
