Actualización de imagenes y css

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
     <nav>
       <a href="#">Inicio</a>
-      ><a href="#">Portafolios</a>
+      <a href="#">Portafolios</a>
       <a href="#">Contacto</a>
     </nav>
 
@@ -37,9 +37,9 @@
   <main>
 
     <section class="contenedor quienes-somos">
-      <he class="titulo">Inicio</he>
-      <div class="contenedor Inicio">
-        <img src="img/ballenas_fondo_inicial.jpg" alt="" />
+      <h2 class="titulo">Inicio</h2>     
+      <div class="contenedor">
+        <img src="img/fondo_dos.jpg" alt="" />
         <div class="contenido_texto_inicio">
           <h3><span>1</span> Trabajo 100% casero y artesanal</h3>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ducimus, maiores!</p>
@@ -52,7 +52,7 @@
 
     <section class="quienes_somos">
       <div class="contenedor">
-        <h2 class="Titulo">Nuestro Portafolio</h2>
+        <h2 class="titulo">Nuestro Portafolio</h2>
 
         <div class="galeria-portafolio">
           <div class="imagen-port">
@@ -78,31 +78,45 @@
     </section>
 
     <section>
-<div class="contactanos">
-  <h2 class="titulo">Contactanos</h2>
-  <div class="card">
-    <img src="img/logo_facebook.png" alt="">
-    <div class="contenido_texto_facebook">
-      <h4 class="">Facebook</h4>
-      <a  href="https://www.facebook.com/CaronlinaR/">/CaronlinaR</a>      
-    </div>
+      <div class="contactanos">
+        <h2 class="titulo">Contactanos</h2>
+        <div class="card">
+          <img src="img/logo_facebook.png" alt="">
+          <div class="contenido_texto_facebook">
+            <h4 class="">Facebook</h4>
+            <a href="https://www.facebook.com/CaronlinaR/">/CaronlinaR</a>
+          </div>
 
-  <div class="card">
-    <img src="img/logo_instagram.jpg" alt="">
-    <div class="contenido_texto_facebook">
-      <h4 class="">Instagram</h4>
-      <a  href="https://www.instagram.com/rise_mujer_/">/rise_mujer_</a>      
-    </div>
-
+          <div class="card">
+            <img src="img/logo_instagram.jpg" alt="">
+            <div class="contenido_texto_facebook">
+              <h4 class="">Instagram</h4>
+              <a href="https://www.instagram.com/rise_mujer_/">/rise_mujer_</a>
+            </div>
+          </div>
         </div>
-      </div>
-
     </section>
-
-
-
   </main>
 
+  <footer>
+    <div class="contenedor-footer">
+      <div class="contenet-foo">
+        <h4>Número Contacto</h4>
+        <p>300 000 0000</p>
+      </div>
+
+      <div class="contenet-foo">
+        <h4>Correo</h4>
+        <p>correo@gmail.com</p>
+      </div>
+
+      <div class="contenet-foo">
+        <h4>Ubicación</h4>
+        <p>Tunja/Boyacá - Colombia</p>
+      </div>
+      <h2 class="Titulo-final">&copy;RubenTT91 | In-genio Medios</h2>
+    </div>
+  </footer>
 </body>
 
 </html>
