--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       <div class="wave" style="height: 150px; overflow: hidden">
         <svg viewBox="0 0 500 150" preserveAspectRatio="none" style="height: 100%; width: 100%">
           <path d="M-8.74,71.55 C149.99,150.00 468.11,-2.44 509.31,87.34 L500.00,150.00 L0.00,150.00 Z"
-            style="stroke: none; fill: #afc906"></path>
+            style="stroke: none; fill: #ffffff"></path>
         </svg>
       </div>
     </section>
