--- a/index.html
+++ b/index.html
@@ -43,13 +43,12 @@
         <img src="img/conejo_volando.png" alt="" class="imagen-inicio" />
         
         <div class="contenido-textos">
-          <h3><span>1</span> 100% Lana</h3>
+          <h3><span>1</span> Detalles confeccionados <em>100%</em> con materiales de Boyacá</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, harum praesentium? Assumenda sunt reiciendis
             harum accusamus excepturi error, aspernatur blanditiis tenetur voluptate suscipit ullam voluptatem
             distinctio fugit amet nam accusantium.</p>
-        </div>
-        <div class="contenido-textos">
-          <h3><span>2</span> Al mejor precio</h3>
+        
+          <h3><span>2</span> Manejamos precios competitivos acorde a la calidad del trabajo</h3>
           <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro perferendis adipisci, facilis est molestiae
             soluta corporis omnis, labore sed nostrum iure quo voluptatibus doloribus aliquam pariatur neque maiores cum
             optio.</p>
